# plant-line-detection

./: .gitignore  CMakeLists.txt  README.md  main.cpp
C++/: .bash_profile  CMakeLists.txt  camera-scale.h  line-follower.h  line.h  main  main.cpp  pld-photo.cpp  pld-video.cpp  pld.h
C++/lib/OpenCV/: Install.txt  install-OpenCV-Ubuntu.sh
C++/libs/PLD/: line-follower.hpp  pld.hpp
C++/libs/RaspiCam/: CMakeLists.txt
C++/scripts/: .bash_profile  sublime-cmake-builder.json
Python/: PlantLineDetection.py  README.md  indexv.py
libs/OpenCV/opencv-3.1.0/samples/cpp/: facedetect
libs/PLD/: line-follower.hpp  line.hpp  pld.hpp
libs/RaspiCam/: main.cpp
libs/RaspiCam/raspicam-0.1.6/: CMakeLists.txt
libs/RaspiCam/raspicam-0.1.6/src/: raspicam_cv.cpp  raspicam_cv.h
libs/RaspiCam/raspicam-0.1.6/src/private_still/: private_still_impl.cpp
libs/Socket/: client.hpp
